[package]
name = "stencil"
version = "0.1.0"
authors = ["Commure <developers@commure.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
once_cell = "1.2.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.40"
smallvec = "0.6"
pin-project = "1.0.1"

[dev-dependencies]
flate2 = "1.0.2"
base64 = "0.9.0"
futures = "0.3.6"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "time"] }